--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "heat-exchange-card",
   "version": "1.0.0",
   "description": "A homeassistant heat exchange card - for, for example, the ComfoAir, WHR, Swegon Casa ",
-  "main": "dist/heat-exchange-graph-card.js",
+  "main": "dist/heat-exchange-card.js",
   "source": "src/main.ts",
   "type": "module",
   "scripts": {
