--- a/.github/workflows/build-on-release.yaml
+++ b/.github/workflows/build-on-release.yaml
@@ -22,4 +22,4 @@ jobs:
       - name: Upload release asset
         uses: svenstaro/upload-release-action@v2
         with:
-          file: dist/heat-exchange-card.js
+          file: dist/erhv-card.js
