--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -3,14 +3,17 @@ name: HACS-Validate
 on:
   push:
   pull_request:
-
+  schedule:
+    - cron: "0 0 * * *"
+  workflow_dispatch:
+    
 jobs:
-  hacs:
+  validate-hacs:
     name: HACS Action
     runs-on: "ubuntu-latest"
     steps:
-      - uses: "actions/checkout@v2"
-      - name: HACS Action
+      - uses: "actions/checkout@v3"
+      - name: HACS Validation
         uses: "hacs/action@main"
         with:
           category: "plugin"
