--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "heat-exchange-card",
-  "version": "1.0.0",
+  "name": "erhv-card",
+  "version": "1.0.1",
   "description": "A homeassistant heat exchange card - for, for example, the ComfoAir, WHR, Swegon Casa ",
-  "main": "dist/heat-exchange-card.js",
+  "main": "dist/erhv-card.js",
   "source": "src/main.ts",
   "type": "module",
   "scripts": {
